# Search-Engine

./: README.md  lda_runner.c
data/: chem233PlainCaption.txt  cs225PlainCaption.txt  cs241PlainCaption.txt  ece210PlainCaption.txt
lda_results/chem233_lda_results/lda_configs/: config_10_0.10_0.10.toml  config_10_0.10_0.55.toml  config_10_0.10_1.00.toml  config_10_0.55_0.10.toml  config_10_0.55_0.55.toml  config_10_0.55_1.00.toml  config_10_1.00_0.10.toml  config_10_1.00_0.55.toml  config_10_1.00_1.00.toml  config_11_0.10_0.10.toml  config_11_0.10_0.55.toml  config_11_0.10_1.00.toml  config_11_0.55_0.10.toml  config_11_0.55_0.55.toml  config_11_0.55_1.00.toml  config_11_1.00_0.10.toml  config_11_1.00_0.55.toml  config_11_1.00_1.00.toml  config_12_0.10_0.10.toml  config_12_0.10_0.55.toml  config_12_0.10_1.00.toml  config_12_0.55_0.10.toml  config_12_0.55_0.55.toml  config_12_0.55_1.00.toml  config_12_1.00_0.10.toml  config_12_1.00_0.55.toml  config_12_1.00_1.00.toml  config_13_0.10_0.10.toml  config_13_0.10_0.55.toml  config_13_0.10_1.00.toml  config_13_0.55_0.10.toml  config_13_0.55_0.55.toml  config_13_0.55_1.00.toml  config_13_1.00_0.10.toml  config_13_1.00_0.55.toml  config_13_1.00_1.00.toml  config_14_0.10_0.10.toml  config_14_0.10_0.55.toml  config_14_0.10_1.00.toml  config_14_0.55_0.10.toml  (+41 more)
lda_results/chem233_lda_results/phi/: lda-model_10_0.10_0.10.phi  lda-model_10_0.10_0.55.phi  lda-model_10_0.10_1.00.phi  lda-model_10_0.55_0.10.phi  lda-model_10_0.55_0.55.phi  lda-model_10_0.55_1.00.phi  lda-model_10_1.00_0.10.phi  lda-model_10_1.00_0.55.phi  lda-model_10_1.00_1.00.phi  lda-model_11_0.10_0.10.phi  lda-model_11_0.10_0.55.phi  lda-model_11_0.10_1.00.phi  lda-model_11_0.55_0.10.phi  lda-model_11_0.55_0.55.phi  lda-model_11_0.55_1.00.phi  lda-model_11_1.00_0.10.phi  lda-model_11_1.00_0.55.phi  lda-model_11_1.00_1.00.phi  lda-model_12_0.10_0.10.phi  lda-model_12_0.10_0.55.phi  lda-model_12_0.10_1.00.phi  lda-model_12_0.55_0.10.phi  lda-model_12_0.55_0.55.phi  lda-model_12_0.55_1.00.phi  lda-model_12_1.00_0.10.phi  lda-model_12_1.00_0.55.phi  lda-model_12_1.00_1.00.phi  lda-model_13_0.10_0.10.phi  lda-model_13_0.10_0.55.phi  lda-model_13_0.10_1.00.phi  lda-model_13_0.55_0.10.phi  lda-model_13_0.55_0.55.phi  lda-model_13_0.55_1.00.phi  lda-model_13_1.00_0.10.phi  lda-model_13_1.00_0.55.phi  lda-model_13_1.00_1.00.phi  lda-model_14_0.10_0.10.phi  lda-model_14_0.10_0.55.phi  lda-model_14_0.10_1.00.phi  lda-model_14_0.55_0.10.phi  (+41 more)
lda_results/chem233_lda_results/term_distributions/: term_dist_10_0.10_0.10.txt  term_dist_10_0.10_0.55.txt  term_dist_10_0.10_1.00.txt  term_dist_10_0.55_0.10.txt  term_dist_10_0.55_0.55.txt  term_dist_10_0.55_1.00.txt  term_dist_10_1.00_0.10.txt  term_dist_10_1.00_0.55.txt  term_dist_10_1.00_1.00.txt  term_dist_11_0.10_0.10.txt  term_dist_11_0.10_0.55.txt  term_dist_11_0.10_1.00.txt  term_dist_11_0.55_0.10.txt  term_dist_11_0.55_0.55.txt  term_dist_11_0.55_1.00.txt  term_dist_11_1.00_0.10.txt  term_dist_11_1.00_0.55.txt  term_dist_11_1.00_1.00.txt  term_dist_12_0.10_0.10.txt  term_dist_12_0.10_0.55.txt  term_dist_12_0.10_1.00.txt  term_dist_12_0.55_0.10.txt  term_dist_12_0.55_0.55.txt  term_dist_12_0.55_1.00.txt  term_dist_12_1.00_0.10.txt  term_dist_12_1.00_0.55.txt  term_dist_12_1.00_1.00.txt  term_dist_13_0.10_0.10.txt  term_dist_13_0.10_0.55.txt  (+52 more)
meta/: config.toml
searchAPI/: config.toml  readme.md  release.sh
searchAPI/cpp/: CMakeLists.txt
searchAPI/cpp/simple-http-server/: CMakeLists.txt  README.md
searchAPI/cpp/simple-http-server/include/: simple_http_server.h
searchAPI/cpp/simple-http-server/src/: api_server.cpp  simple_http_server.cpp
searchAPI/node/: package.json  proxy.js
searchAPI/web/: index.html
(+2074 files in other folders)
